# HisabKitab

./: .gitignore  README.md
Admin_panel/: README.md  package-lock.json  package.json  tailwind.config.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6893f83906a3_initial_migration.py  9fb008be69c1_add_goals_and_groups.py
backend/app/: __init__.py  main.py  tasks.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  ai.py  analytics.py  auth.py  budgets.py  categories.py  expenses.py  goals.py  notifications.py  ocr.py  users.py  voice.py
backend/app/core/: __init__.py  celery_app.py  config.py  exceptions.py  feature_flags.py  limiter.py  security.py
backend/app/db/: __init__.py  base.py  database.py  session.py
backend/app/middleware/: __init__.py  error_handler.py  logging.py  rate_limiter.py
backend/app/models/: __init__.py  audit.py  budget.py  category.py  event.py  expense.py  goal.py  group.py  notification.py  user.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  budget.py  category.py  expense.py  goal.py  notification.py  user.py
backend/app/services/: __init__.py  admin_service.py  ai_service.py  analytics_service.py  auth_service.py  budget_service.py  category_service.py  email_service.py  event_service.py  expense_service.py  export_service.py  firebase_service.py  goal_service.py  notification_service.py  ocr_service.py  redis_service.py  storage_service.py  voice_service.py
backend/app/templates/: welcome.html
backend/app/templates/emails/: forgot_password.html  verification.html  welcome.html
backend/app/utils/: __init__.py  helpers.py  logger.py  validators.py
backend/tests/: conftest.py  test_auth.py  test_categories.py  test_expenses.py
docs/: OPEN_SOURCE.md  System_Architecture.md  architecture.md
frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  (+1 more)
(+94 files in other folders)
