[project]
name = "hisabkitab-backend"
version = "1.0.0"
description = "HisabKitab - Personal Expense Management Backend"
authors = [
    {name = "Niranjan Sah", email = "niranjansah87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
